--- a/.github/workflows/build-gdock.yml
+++ b/.github/workflows/build-gdock.yml
@@ -1,6 +1,6 @@
 #=================================================
 #   Description: Build G-DOCK FROM LEAN'S LEDE
-#   Author: JK
+#   Author: J
 #=================================================
 
 name: Build G-DOCK
